--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
 env:
   - project=webui
 install:
-  - npm i gulp-cli -g
+  - npm i gulp@3.9.1 -g
   - npm i
   - gulp -v
 before_script:
