--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "ali-oss": "^6.1.1",
+    "exif-js": "^2.3.0",
     "marked": "^0.7.0",
     "mime": "^2.4.4"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
     "async": "^3.1.0",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
+    "gulp-uglify": "^3.0.2",
     "through2": "^3.0.1",
     "vinyl": "^2.2.0"
   }
