--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
     "gulp-uglify": "^3.0.2",
+    "run-sequence": "^2.2.1",
     "through2": "^3.0.1",
     "vinyl": "^2.2.0"
   }
