--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ali-oss": "^6.1.1",
     "exif-js": "^2.3.0",
     "marked": "^0.7.0",
-    "mime": "^2.4.4"
+    "mime": "^2.4.4",
+    "pdfjs": "^2.3.2",
+    "pdfjs-dist": "^2.2.228"
   },
   "devDependencies": {
     "async": "^3.1.0",
