--- a/package.json
+++ b/package.json
@@ -15,23 +15,29 @@
   "dependencies": {
     "ali-oss": "^6.1.1",
     "exif-js": "^2.3.0",
+    "google-distance": "^1.0.1",
     "html-minifier": "^4.0.0",
     "marked": "^0.7.0",
     "mime": "^2.4.4",
     "normalize.css": "^8.0.1",
     "pdfjs": "^2.3.2",
     "pdfjs-dist": "^2.2.228",
-    "qrcode": "^1.4.4"
+    "qrcode": "^1.4.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "sanitize-html": "^1.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "async": "^3.1.0",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-uglify": "^3.0.2",
     "run-sequence": "^2.2.1",
     "through2": "^3.0.1",
