--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,4 +1,4 @@
 {
-  "presets": [["@babel/preset-env", { "loose": true }]],
+  "presets": [["@babel/preset-env", { "loose": true }], "@babel/preset-react"],
   "plugins": [["@babel/plugin-proposal-class-properties", { "loose": true }]]
 }
