feat: add react

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,4 +1,7 @@
 {
   "presets": [["@babel/preset-env", { "loose": true }], "@babel/preset-react"],
-  "plugins": [["@babel/plugin-proposal-class-properties", { "loose": true }]]
+  "plugins": [
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    "@babel/plugin-syntax-top-level-await"
+  ]
 }
