--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "qrcode": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sanitize-html": "^1.23.0"
+    "sanitize-html": "^1.23.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
