--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-distance": "^1.0.1",
     "html-minifier": "^4.0.0",
     "jest": "^26.2.2",
+    "js-md5": "^0.7.3",
     "marked": "^0.7.0",
     "mime": "^2.4.4",
     "mockjs": "^1.1.0",
@@ -48,6 +49,8 @@
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-uglify": "^3.0.2",
+    "pdfmake": "^0.1.68",
+    "requirejs": "^2.3.6",
     "run-sequence": "^2.2.1",
     "through2": "^3.0.1",
     "uglify-js": "^3.9.1",
