--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/traverse": "^7.12.5",
     "ali-oss": "^6.1.1",
     "driver.js": "^0.9.8",
     "exif-js": "^2.3.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/parser": "^7.12.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-syntax-top-level-await": "^7.10.1",
     "@babel/plugin-transform-regenerator": "^7.10.1",
@@ -50,6 +52,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-uglify": "^3.0.2",
     "pdfmake": "^0.1.68",
+    "read-excel-file": "^4.1.0",
     "requirejs": "^2.3.6",
     "run-sequence": "^2.2.1",
     "through2": "^3.0.1",
