--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rrweb": "^0.9.14",
     "sanitize-html": "^1.23.0",
     "vue": "^2.6.11"
   },
