--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-minifier": "^4.0.0",
     "jest": "^26.2.2",
     "js-md5": "^0.7.3",
+    "json-server": "^0.16.3",
     "marked": "^0.7.0",
     "mime": "^2.4.4",
     "mockjs": "^1.1.0",
