--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,12 @@ jobs:
           export date=`date`
           BUILD_TIME=$date gulp
           ls
-      - name: Deploy
+      - name: GitHub Pages
         if: success()
-        uses: crazy-max/ghaction-github-pages@v1
+        uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: gh-pages
           build_dir: dist
+          keep_history: false
         env:
           GITHUB_TOKEN: ${{ secrets.gt }}
