--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.13.1",
     "rrweb": "^0.9.14",
     "sanitize-html": "^1.23.0",
+    "socket.io": "^4.1.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
